# nevertwice

./: .env.example  .gitignore  AUDIT_2026-06-18.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  WEAKNESSES.md  install.py  memory_dashboard.html  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
anamnesis/: _test_anticipate.py  _test_brain.py  _test_brain_invariants.py  _test_capture.py  _test_causal.py  _test_docparse.py  _test_entities.py  _test_guards.py  _test_memory_v3.py  _test_merge.py  anticipate.py  api.py  capture.py  causal.py  config.py  consolidate_memory.py  dashboard.py  digest.py  docparse.py  embed_index.py  graph.py  graphify.py  guards.py  index_sqlite.py  ingest.py  mcp_server.py  memory_hook.py  memory_search.py  merge.py  sync.py  watch.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  BRAIN_LAYER_DESIGN.md  COMPARISON.md  CONFIG.md  DEMO.md  INTEGRATIONS.md  README.md  SELF_EXTRACTION.md  WEAKNESSES.md
examples/: README.md  demo.py  demo.sh  guard_demo.py  no_model_demo.py  scenario_demo.py
nevertwice/: __init__.py  _test_api.py  _test_audit_fixes.py  _test_brain.py  _test_brain_invariants.py  _test_brain_sqlite.py  _test_capture.py  _test_cloud_embed.py  _test_dashboard.py  _test_digest.py  _test_docparse.py  _test_entities.py  _test_failure_injection.py  _test_guards.py  _test_ingest.py  _test_integrations.py  _test_memory_hook.py  _test_memory_v2.py  _test_memory_v3.py  _test_merge.py  _test_quant.py  _test_watch.py  anticipate.py  api.py  bootstrap_contexts.py  build_user_model.py  capture.py  causal.py  config.py  consolidate_memory.py  dashboard.py  digest.py  docparse.py  embed_index.py  graph.py  graphify.py  guards.py  health_check.py  import_memory.py  index_sqlite.py  (+14 more)
paper/: README.md  anamnesis.md  nevertwice.md
research/: ABLATION_RESULTS.md  ABSTRACTIVE.md  ACTIVE_MEMORY.md  BANDIT.md  BIO_MEMORY.md  CONSOLIDATION_EVAL.md  DIVERGENT.md  FORGETTING.md  LIVE_VALIDATION.md  LONGITUDINAL_BENCH.md  POISONING.md  POSTERIOR_MODEL.md  QA_ACCURACY.md  QUANTIZATION.md  RARE_EVENT.md  README.md  REAL_TRACE.md  RETRIEVAL_FUSION.md  W2_PRECISION.md  _common.py  _rerank.py  _xreranker.py  abstractive.json  abstractive.py  bandit.json  bandit.py  bio_memory.py  bitemporal_ablation.py  consolidation_eval.json  consolidation_eval.py  contradiction_scan.py  divergent.py  eff_curve_figure.py  embedder_ab.py  eval_harness.py  forgetting.py  gen_post_retrieval_infographic.py  head_to_head.py  latency_bench.py  live_validation.py  (+30 more)
tests/: _test_anticipate.py  _test_api.py  _test_audit_fixes.py  _test_brain.py  _test_brain_invariants.py  _test_brain_sqlite.py  _test_capture.py  _test_causal.py  _test_cloud_embed.py  _test_dashboard.py  _test_digest.py  _test_guards.py  (+15 more)
(+124 files in other folders)
