[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nevertwice"
version = "2.1.1"
description = "Proactive, local-first memory for AI coding agents - it acts before your agent repeats a mistake. Formerly Anamnesis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Platon Chernov" }]
keywords = ["memory", "llm", "agents", "mcp", "claude", "rag", "embeddings", "zettelkasten"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []   # standard library only; Ollama/cloud are reached over HTTP

# Everything below is OPTIONAL - the core stays stdlib-only. Install only what you use.
[project.optional-dependencies]
reranker = ["torch", "transformers"]   # trained cross-encoder precision boost (NEVERTWICE_XRERANK=1)
langchain = ["langchain-core"]         # NevertwiceRetriever / NevertwiceMemory adapters
llamaindex = ["llama-index-core"]      # NevertwiceRetriever for LlamaIndex

[project.urls]
Homepage = "https://github.com/DonPlaton/nevertwice"
Repository = "https://github.com/DonPlaton/nevertwice"
Issues = "https://github.com/DonPlaton/nevertwice/issues"
Changelog = "https://github.com/DonPlaton/nevertwice/blob/master/CHANGELOG.md"

[project.scripts]
nevertwice-search = "nevertwice.memory_search:main"
nevertwice-remember = "nevertwice.remember:main"
nevertwice-ingest = "nevertwice.ingest:main"
nevertwice-watch = "nevertwice.watch:main"
nevertwice-mcp = "nevertwice.mcp_server:main"
nevertwice-tasks = "nevertwice.manage_tasks:main"
nevertwice-sync = "nevertwice.sync:main"
nevertwice-digest = "nevertwice.digest:main"
nevertwice-conflicts = "nevertwice.digest:conflicts_main"
nevertwice-stats = "nevertwice.stats:main"
nevertwice-dashboard = "nevertwice.dashboard:main"
nevertwice-guards = "nevertwice.guards:main"
nevertwice-anticipate = "nevertwice.anticipate:main"
nevertwice-causal = "nevertwice.causal:main"
# one release of rename back-compat: the old anamnesis-* commands keep working
anamnesis-search = "nevertwice.memory_search:main"
anamnesis-remember = "nevertwice.remember:main"
anamnesis-mcp = "nevertwice.mcp_server:main"

[tool.setuptools]
packages = ["nevertwice", "nevertwice.integrations"]

[tool.setuptools.package-data]
nevertwice = ["*.md"]
